use ant design RTL features

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -2,7 +2,12 @@
   "@meta": {
     "app": "مكالمات اينو"
   },
-  "@shared": {},
+  "@shared": {
+    "error": {
+      "requiredM": "{key} مطلوب",
+      "requiredF": "{key} مطلوبه"
+    }
+  },
   "login": {
     "welcome": "أهلا بك",
     "form": {
