--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -37,5 +37,17 @@
         "emailNotValid": "البريد الإلكتروني غير صالح"
       }
     }
+  },
+  "forgetPassword": {
+    "title": "نسيت كلمة المرور",
+    "form": {
+      "email": "البريد الإلكتروني",
+      "send": "ارسل",
+      "login": "تسجيل الدخول",
+      "createAccount": "إنشاء حساب؟",
+      "error": {
+        "emailNotValid": "البريد الإلكتروني غير صالح"
+      }
+    }
   }
 }
