otp password reset page

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -49,5 +49,12 @@
         "emailNotValid": "البريد الإلكتروني غير صالح"
       }
     }
+  },
+  "otpPasswordReset": {
+    "title": "أدخل كود من 6 أرقام",
+    "verify": "تحقق",
+    "form": {
+      "otp": "كلمه المرور"
+    }
   }
 }
