--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -49,5 +49,12 @@
         "emailNotValid": "email not valid"
       }
     }
+  },
+  "otpPasswordReset": {
+    "title": "Enter 6 digit number",
+    "verify": "Verify",
+    "form": {
+      "otp": "Otp"
+    }
   }
 }
