--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -73,5 +73,22 @@
         "emailNotValid": "البريد الإلكتروني غير صالح"
       }
     }
+  },
+  "sidebar": {
+    "dashboard": "لوحة التحكم",
+    "orderConfirmation": "الطلبات",
+    "campaigns": "الحملات",
+    "voiceMessages": "الرسائل الصوتيه",
+    "conferenceBridge": "Conference Bridge",
+    "phoneBook": "سجل الهاتف",
+    "extensions": "الملحقات",
+    "pbxWare": "PBXWare",
+    "reporting": "التقارير",
+    "callReporting": "Call Reporting",
+    "callSurvey": "Call Survey",
+    "invoices": "الفواتير",
+    "autoDialer": "الاتصال الالي",
+    "developerTab": "صفحة المطور",
+    "contactSupport": "اتصل بالدعم"
   }
 }
