--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -120,5 +120,9 @@
     "autoDialer": "Auto Dialer",
     "developerTab": "Developer Tab",
     "contactSupport": "Contact Support"
+  },
+  "home": {
+    "charts": "Charts",
+    "serviceLevelDetails": "Service Level Details"
   }
 }
