--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -104,25 +104,9 @@
     "busyExtensions": "Busy Extensions",
     "waitingCalls": "Waiting Calls"
   },
-  "sidebar": {
-    "dashboard": "Dashboard",
-    "orderConfirmation": "Order Confirmation",
-    "campaigns": "Campaigns",
-    "voiceMessages": "Voice Messages",
-    "conferenceBridge": "Conference Bridge",
-    "phoneBook": "Phone Book",
-    "extensions": "Extensions",
-    "pbxWare": "PBXWare",
-    "reporting": "Reporting",
-    "callReporting": "Call Reporting",
-    "callSurvey": "Call Survey",
-    "invoices": "Invoices",
-    "autoDialer": "Auto Dialer",
-    "developerTab": "Developer Tab",
-    "contactSupport": "Contact Support"
-  },
   "home": {
     "charts": "Charts",
-    "serviceLevelDetails": "Service Level Details"
+    "serviceLevelDetails": "Service Level Details",
+    "billingDetails": "Billing Details"
   }
 }
